--- a/views/component/list-doma.html
+++ b/views/component/list-doma.html
@@ -35,7 +35,7 @@
                     Коттеджный поселок<br>Комильфо
                 </a>
                 <br>
-                <a href="#/" class="text--italic text--price link link--reset link--dotted margin--top-small">Ипотека</a>
+                <a href="#/" class="text--italic text--price link link--reset link--dotted margin--top-small">кредит</a>
             </td>
 
             <!-- Направление -->
@@ -85,7 +85,7 @@
                     Коттеджный поселок<br>Комильфо
                 </a>
                 <br>
-                <a href="#/" class="text--italic text--price link link--reset link--dotted margin--top-small">Ипотека</a>
+                <a href="#/" class="text--italic text--price link link--reset link--dotted margin--top-small">кредит</a>
             </td>
             <td>
                 <span>Ярославское ш.,<br>29 км</span>
@@ -123,7 +123,7 @@
                     Коттеджный поселок<br>Комильфо
                 </a>
                 <br>
-                <a href="#/" class="text--italic text--price link link--reset link--dotted margin--top-small">Ипотека</a>
+                <a href="#/" class="text--italic text--price link link--reset link--dotted margin--top-small">кредит</a>
             </td>
             <td>
                 <span>Ярославское ш.,<br>29 км</span>
