--- a/views/component/list-room.html
+++ b/views/component/list-room.html
@@ -31,7 +31,7 @@
             <!-- Город -->
             <td>
                 <a href="#/sale-realty/flats/search-result" target="_blank" class="link">
-                    г. Москва<br>ул. Федоскинская д. 5
+                    г. Минск<br>ул. Федоскинская д. 5
                 </a>
             </td>
 
@@ -71,7 +71,7 @@
             </td>
             <td>
                 <a href="/sale-realty/flats/1390220/" target="_blank" class="link">
-                    г. Москва<br>ул. Федоскинская д. 5
+                    г. Минск<br>ул. Федоскинская д. 5
                 </a>
             </td>
             <td>
@@ -98,7 +98,7 @@
             </td>
             <td>
                 <a href="/sale-realty/flats/1390220/" target="_blank" class="link">
-                    г. Москва<br>ул. Федоскинская д. 5
+                    г. Минск<br>ул. Федоскинская д. 5
                 </a>
             </td>
             <td>
