--- a/views/component/room.html
+++ b/views/component/room.html
@@ -1,7 +1,7 @@
 <div>
     <div class="grid">
         <div class="col--1-1 margin--top">
-            <h1>Продажа однокомнатной квартиры, г. Москва , улица Вавилова, дом 93, лот вт-0317263</h1>
+            <h1>Продажа однокомнатной квартиры, г. Минск , улица Вавилова, дом 93, лот вт-0317263</h1>
         </div>
     </div>
 
@@ -49,7 +49,7 @@
 
         <div class="col--1-1 margin--top">
             <h4>Дополнительная информация</h4>
-            <p>Просторная однокомнатная квартира в одном из лучших типов домов архитектора Ефима Вулыха. Лучший район старой Москвы: зелено, тихо, вся инфраструктура сконцентрирована в пешей доступности. Дом окружен зеленью, много детских площадок. За домом огороженная парковка. Один взрослый собственник. Физически свободна. Полная стоимость в ДКП.</p>
+            <p>Просторная однокомнатная квартира в одном из лучших типов домов архитектора Ефима Вулыха. Лучший район старой Минска: зелено, тихо, вся инфраструктура сконцентрирована в пешей доступности. Дом окружен зеленью, много детских площадок. За домом огороженная парковка. Один взрослый собственник. Физически свободна. Полная стоимость в ДКП.</p>
             <h4>Фотографии</h4>
         </div>
     </div>
