--- a/views/jobs/vacancy.html
+++ b/views/jobs/vacancy.html
@@ -9,7 +9,7 @@
             <h1 class="margin--bottom">Работа в ЗемНедвижимость</h1>
 
             <p>Ищете интересную работу? Вы готовы получать новые знания и опыт, а также открыты для общения с новыми, интересными людьми?</p>
-            <p>ЗемНедвижимость — стабильная и успешная компания, лидирующая на рынке недвижимости Москвы и Московской области, обладатель профессиональных наград, надежный и привлекательный работодатель.</p>
+            <p>ЗемНедвижимость — стабильная и успешная компания, лидирующая на рынке недвижимости Минска и Минской области, обладатель профессиональных наград, надежный и привлекательный работодатель.</p>
 
             <h3 class="margin--v">Почему работа в ЗемНедвижимость?</h3>
 
@@ -31,7 +31,7 @@
 
             <p>Работа в ЗемНедвижимость — это отличная возможность расти и развиваться вместе с компанией, а для молодых специалистов — старт для карьеры. Нам нужны люди, готовые внести свой вклад в компанию и стать ее частью, а мы, в свою очередь, предоставим все условия для профессионального роста, поможем воплотить идеи и подарим уверенность в завтрашнем дне!</p>
             <p>Работу в агентстве недвижимости можно начать в любом возрасте и построить успешную карьеру.</p>
-            <p>Наша компания заботится о своих сотрудниках, предоставляет профессионально оборудованные рабочие места, удобно расположенные офисы во всех районах Москвы, льготное ДМС и посещение фитнес-центров, оформление по ТК РФ, гибкий график работы и достойную оплату труда. Комфортная работа риэлтором — наша задача!</p>
+            <p>Наша компания заботится о своих сотрудниках, предоставляет профессионально оборудованные рабочие места, удобно расположенные офисы во всех районах Минска, льготное ДМС и посещение фитнес-центров, оформление по ТК РФ, гибкий график работы и достойную оплату труда. Комфортная работа риэлтором — наша задача!</p>
             <p>Работа в нашем агентстве недвижимости — это большие возможности для карьерного роста! </p>
 
         </div>
