--- a/views/news/press.html
+++ b/views/news/press.html
@@ -9,11 +9,11 @@
             <h1 class="margin--bottom">Пресс-центр</h1>
 
             <img src="http://www.incom.ru/images/press-main.jpg" class="border--radius col--1-1" alt="Пресс-центр - О нас">
-            <p class="margin--top">ЗемНедвижимость — самый крупный участник организованного рынка жилья Москвы и Подмосковья. В течение многих лет компания является лидером отрасли, и ее статистика является наиболее репрезентативной по сравнению с другими базами данных и многими иными источниками информации.</p>
+            <p class="margin--top">ЗемНедвижимость — самый крупный участник организованного рынка жилья Минска и Подмосковья. В течение многих лет компания является лидером отрасли, и ее статистика является наиболее репрезентативной по сравнению с другими базами данных и многими иными источниками информации.</p>
 
             <h2 class="margin--top-large">Рынок жилья: вчера, сегодня, завтра</h2>
 
-            <p>Пресс-центр ЗемНедвижимость работает с запросами по всему рынку жилья Московского столичного региона. Мы не можем предоставить экспертную информацию о недвижимости в Германии, однако наши специалисты все расскажут о Немецкой улице в Москве. У нас нет данных о квартирах во французском Марселе, но есть все возможности сравнить жизнь в подмосковных «Марселе» и «Кембридже». Обращайтесь за комментариями!</p>
+            <p>Пресс-центр ЗемНедвижимость работает с запросами по всему рынку жилья Московского столичного региона. Мы не можем предоставить экспертную информацию о недвижимости в Германии, однако наши специалисты все расскажут о Немецкой улице в Минске. У нас нет данных о квартирах во французском Марселе, но есть все возможности сравнить жизнь в подмосковных «Марселе» и «Кембридже». Обращайтесь за комментариями!</p>
 
             <div class="panel--info margin--top-large">
                 <div class="panel__icon panel__icon--green">
