--- a/views/rent-realty/flats.html
+++ b/views/rent-realty/flats.html
@@ -6,11 +6,11 @@
 
     <div class="grid grid--small">
         <div class="col--3-4">
-            <h1>Аренда квартир, снять квартиру в Москве</h1>
+            <h1>Аренда квартир, снять квартиру в Минске</h1>
 
             <div data-ng-include="'/views/component/filter.html'"></div>
 
-            <h3 class="text--h4">Аренда дешевых квартир в Москве</h3>
+            <h3 class="text--h4">Аренда дешевых квартир в Минске</h3>
 
             <ul class="grid grid--small list">
                 <li class="col--1-4">
@@ -44,12 +44,12 @@
             </ul>
 
             <div class="text--center margin--top">
-                <a href="#/" class="button button--medium button--green">Все дешевые квартиры в Москве</a>
+                <a href="#/" class="button button--medium button--green">Все дешевые квартиры в Минске</a>
             </div>
 
-            <h2 class="margin--v">К вопросу об аренде квартир в Москве</h2>
+            <h2 class="margin--v">К вопросу об аренде квартир в Минске</h2>
 
-            <p>Везунчик тот, кому никогда не приходилось искать съемное жилье для себя или своего семейства хотя бы на полгода. Вопросом, как снять квартиру в Москве, озадачивались многие из нас. Вариант, чтобы дешево, с хорошей транспортной развязкой, с ремонтом, да при этом без попадания на ухищрения мошенников, кажется слегка фантастическим.</p>
+            <p>Везунчик тот, кому никогда не приходилось искать съемное жилье для себя или своего семейства хотя бы на полгода. Вопросом, как снять квартиру в Минске, озадачивались многие из нас. Вариант, чтобы дешево, с хорошей транспортной развязкой, с ремонтом, да при этом без попадания на ухищрения мошенников, кажется слегка фантастическим.</p>
             <p>Существует множество подводных камней при поиске жилья по объявлениям. Наниматель может наткнуться на недобросовестных хозяев, на проблемы с участковым, всевозможные недопонимания от собственников в области посещений, замков, порчи имущества, мелкого ремонта <nobr>и т. п.</nobr></p>
             <p>Если учитывать все неприятные моменты, которые могут постигнуть будущего квартиранта, рискнувшего самостоятельно найти себе квадратные метры, приходит понимание того, что услуги агентства в таком вопросе, как аренда квартир, просто необходимость. Да и стоят совсем недорого по сравнению с возможными потерями.</p>
 
@@ -80,7 +80,7 @@
             </div>
 
 
-            <h2 class="margin--v">Как снять квартиру в Москве без проблем</h2>
+            <h2 class="margin--v">Как снять квартиру в Минске без проблем</h2>
             <p>Проблема, как снять желаемую квартиру, перестанет пугать, если к ее решению подключить профессионалов. Выбирая агентство недвижимости, стоит обратить внимание на историю работы и отзывы от клиентов. Несомненно, уровень цены на услуги важен, но еще важнее репутация.</p>
             <p>Для нашего агентства с <nobr>20-летним</nobr> стажем аренда квартир, как направление деятельности, стало одним из важнейших. Задача сотрудников компании ЗемНедвижимость — максимально упростить процесс подбора и учесть все пожелания будущего квартиросъемщика. Также мы поможем избежать всех трений и разногласий в будущем, исходящих, как от собственников, так и от временных жильцов.</p>
             <p>Сегодня совместная работа с агентством ЗемНедвижимость дает возможность учитывать все требования нанимателя:</p>
