--- a/views/sale-realty/arenda-kottedzhey.html
+++ b/views/sale-realty/arenda-kottedzhey.html
@@ -27,7 +27,7 @@
             <p>ЗемНедвижимость осуществляет широкий спектр операций с элитным жильем. Наши эксперты окажут вам быструю и квалифицированную помощь в аренде загородного дома или коттеджа с уникальным внутренним дизайном и полным набором удобств в самых престижных направлениях Подмосковья.</p>
             <p>Вам не придется терять драгоценное время и вникать в нюансы договора аренды, наши эксперты позаботятся о вашем комфорте и безопасности.</p>
             <p>Если вы являетесь владельцем элитного загородного дома или коттеджа и хотите получать от своей собственности доход, то наши эксперты готовы взять на себя все хлопоты, связанные со сдачей его в аренду.</p>
-            <p>Кроме этого, мы поможем вам сдать или <a href="#/" class="link link--line">снять квартиру</a> в Москве или Подмосковье.</p>
+            <p>Кроме этого, мы поможем вам сдать или <a href="#/" class="link link--line">снять квартиру</a> в Минске или Подмосковье.</p>
         </div>
         <div class="col--1-4">
             <div class="panel panel--box panel--realty">
