--- a/views/sale-realty/flats.html
+++ b/views/sale-realty/flats.html
@@ -4,11 +4,11 @@
         <li><span>Недвижимость</span></li>
     </ul>
 
-    <h1>Купить квартиру в Москве</h1>
+    <h1>Купить квартиру в Минске</h1>
 
     <div data-ng-include="'/views/component/filter.html'"></div>
 
-    <h3>Воспользуйтесь быстрым поиском по базе квартир в Москве</h3>
+    <h3>Воспользуйтесь быстрым поиском по базе квартир в Минске</h3>
 
     <div class="grid grid-col--1-3">
         <ul class="list">
@@ -68,7 +68,7 @@
                         <i></i>
                     </div>
                     <p>
-                        Подберем варианты за 24 часа по всем базам Москвы и области.
+                        Подберем варианты за 24 часа по всем базам Минска и области.
                     </p>
                 </div>
 
@@ -80,7 +80,7 @@
 
             <div class="panel panel--box">
                 <p class="text--h3">
-                    <a class="link link--reset" href="/sale-realty/flats">Самые дешевые квартиры в Москве</a>
+                    <a class="link link--reset" href="/sale-realty/flats">Самые дешевые квартиры в Минске</a>
                 </p>
 
                 <ul class="grid grid-col--1-4 list">
@@ -115,21 +115,21 @@
                 </ul>
 
                 <div class="text--center margin--top-large">
-                    <a href="#/" class="button button--medium button--green">Самые дешевые квартиры в Москве</a>
+                    <a href="#/" class="button button--medium button--green">Самые дешевые квартиры в Минске</a>
                 </div>
 
 
             </div>
 
             <div class="margin--top">
-                <h2>Купить квартиру в Москве</h2>
+                <h2>Купить квартиру в Минске</h2>
 
-                <p>В столице большой выбор жилья на продажу, но остановиться на конкретном варианте зачастую не так просто. Не каждая квартира соответствует требованиям. Самостоятельные поиски приводят к тому, что купить квартиру в Москве становится невероятно сложно. Процесс покупки затягивается надолго, ведь кроме подбора уютного жилья нужно собрать различные справки, подготовить, заверить документы. Рекомендуем сразу же обращаться к опытным и подготовленным профессионалам. Мечтаете купить квартиру в Москве на вторичном рынке жилья? Наши риелторы к вашим услугам!</p>
-                <p>Также мы оказываем помощь в продаже квартиры в Москве и Подмосковье на вторичном рынке жилья. Мы быстро подберем для вашего предложения заинтересованных покупателей.</p>
-                <p>Просмотреть актуальные и самые свежие варианты комнат и квартир Москвы вы можете в нашей базе квартир.</p>
+                <p>В столице большой выбор жилья на продажу, но остановиться на конкретном варианте зачастую не так просто. Не каждая квартира соответствует требованиям. Самостоятельные поиски приводят к тому, что купить квартиру в Минске становится невероятно сложно. Процесс покупки затягивается надолго, ведь кроме подбора уютного жилья нужно собрать различные справки, подготовить, заверить документы. Рекомендуем сразу же обращаться к опытным и подготовленным профессионалам. Мечтаете купить квартиру в Минске на вторичном рынке жилья? Наши риелторы к вашим услугам!</p>
+                <p>Также мы оказываем помощь в продаже квартиры в Минске и Подмосковье на вторичном рынке жилья. Мы быстро подберем для вашего предложения заинтересованных покупателей.</p>
+                <p>Просмотреть актуальные и самые свежие варианты комнат и квартир Минска вы можете в нашей базе квартир.</p>
 
                 <p class="text--center">
-                    <a href="#/" class="button button--medium button--green">Предложения квартир в Москве</a>
+                    <a href="#/" class="button button--medium button--green">Предложения квартир в Минске</a>
                 </p>
             </div>
 
@@ -151,7 +151,7 @@
 
             <div class="panel panel--box">
                 <p class="text--h3">
-                    <a class="link link--reset" href="/sale-realty/flats">Самые дорогие квартиры в Москве</a>
+                    <a class="link link--reset" href="/sale-realty/flats">Самые дорогие квартиры в Минске</a>
                 </p>
 
                 <ul class="grid grid-col--1-4 list">
@@ -186,7 +186,7 @@
                 </ul>
 
                 <div class="text--center margin--top">
-                    <a href="#/" class="button button--medium button--green">Самые дешевые квартиры в Москве</a>
+                    <a href="#/" class="button button--medium button--green">Самые дешевые квартиры в Минске</a>
                 </div>
             </div>
 
@@ -202,14 +202,14 @@
                 </p>
 
                 <h2>Купить квартиру через ЗемНедвижимость</h2>
-                <p>База квартир и комнат в Москве и Подмосковье состоит более чем из 15 тысяч предложений вторичной недвижимости и новостроек — актуальных и проверенных нашими специалистами.</p>
-                <p>В нашей базе квартир на продажу в Москве и области имеется удобный фильтр, с помощью которого можно отфильтровать жилье по важным для вас критериям и отобрать квартиры с возможностью ипотеки.</p>
+                <p>База квартир и комнат в Минске и Подмосковье состоит более чем из 15 тысяч предложений вторичной недвижимости и новостроек — актуальных и проверенных нашими специалистами.</p>
+                <p>В нашей базе квартир на продажу в Минске и области имеется удобный фильтр, с помощью которого можно отфильтровать жилье по важным для вас критериям и отобрать квартиры с возможностью кредита.</p>
 
                 <h2>Преимущества покупки жилья через ЗемНедвижимость:</h2>
 
                 <ol class="list list--number">
                     <li><div class="circle">1</div>Консультация с ведущими специалистами по недвижимости</li>
-                    <li><div class="circle">2</div>Подбор вторичной квартиры, комнаты или новостройки по всем закрытым базам Москвы и области</li>
+                    <li><div class="circle">2</div>Подбор вторичной квартиры, комнаты или новостройки по всем закрытым базам Минска и области</li>
                     <li><div class="circle">3</div>Определение рыночной стоимости квартиры и торг с продавцом</li>
                     <li><div class="circle">4</div>Защита ваших интересов на всех этапах сделки</li>
                     <li><div class="circle">5</div>Юридическая проверка квартиры, организация и проведение сделки купли-продажи</li>
@@ -226,7 +226,7 @@
                 <ul class="question-board">
                     <li>
                         <div class="left">
-                            <a class="question-board__link" href="/uslugi/besplatnye-kosultacii/pokupka_kvartiry/vopros-1507/">Здравствуйте! Сообщите, пожалуйста, сколько будет стоить (каков % от цены квартиры) поиск / подбор квартиры вашими специалистами в г. Москве?</a>
+                            <a class="question-board__link" href="/uslugi/besplatnye-kosultacii/pokupka_kvartiry/vopros-1507/">Здравствуйте! Сообщите, пожалуйста, сколько будет стоить (каков % от цены квартиры) поиск / подбор квартиры вашими специалистами в г. Минске?</a>
                             <div class="question-board__info">
                                 <span>Дмитрий</span>
                                 <span>01.05.2016, </span>
@@ -240,7 +240,7 @@
                     </li>
                     <li>
                         <div class="left">
-                            <a class="question-board__link" href="/uslugi/besplatnye-kosultacii/pokupka_kvartiry/vopros-1507/">Здравствуйте! Сообщите, пожалуйста, сколько будет стоить (каков % от цены квартиры) поиск / подбор квартиры вашими специалистами в г. Москве?</a>
+                            <a class="question-board__link" href="/uslugi/besplatnye-kosultacii/pokupka_kvartiry/vopros-1507/">Здравствуйте! Сообщите, пожалуйста, сколько будет стоить (каков % от цены квартиры) поиск / подбор квартиры вашими специалистами в г. Минске?</a>
                             <div class="question-board__info">
                                 <span>Дмитрий</span>
                                 <span>01.05.2016, </span>
@@ -254,7 +254,7 @@
                     </li>
                     <li>
                         <div class="left">
-                            <a class="question-board__link" href="/uslugi/besplatnye-kosultacii/pokupka_kvartiry/vopros-1507/">Здравствуйте! Сообщите, пожалуйста, сколько будет стоить (каков % от цены квартиры) поиск / подбор квартиры вашими специалистами в г. Москве?</a>
+                            <a class="question-board__link" href="/uslugi/besplatnye-kosultacii/pokupka_kvartiry/vopros-1507/">Здравствуйте! Сообщите, пожалуйста, сколько будет стоить (каков % от цены квартиры) поиск / подбор квартиры вашими специалистами в г. Минске?</a>
                             <div class="question-board__info">
                                 <span>Дмитрий</span>
                                 <span>01.05.2016, </span>
