--- a/views/sale-realty/newbuild.html
+++ b/views/sale-realty/newbuild.html
@@ -15,7 +15,7 @@
         </div>
     </section>
 
-    <h1>Новостройки Москвы и Подмосковья</h1>
+    <h1>Новостройки Минска и Подмосковья</h1>
 
     <div data-ng-include="'/views/component/filter.html'"></div>
 
@@ -23,7 +23,7 @@
         <li class="col--1-6">
             <a href="/uslugi/pokupka-kvartir-i-komnat/">
                 <span class="panel--120-blue"><img src="/Content/img/newbuild/voennaya.png"></span>
-                <p class="text--bold">Военная <br>ипотека</p>
+                <p class="text--bold">Военная <br>кредит</p>
             </a>
         </li>
         <li class="col--1-6">
@@ -53,7 +53,7 @@
         <li class="col--1-6">
             <a href="/uslugi/pokupka-kvartir-i-komnat/">
                 <span class="panel--120-blue"><img src="/Content/img/newbuild/ipoteka.png"></span>
-                <p class="text--bold">Ипотека от<br>11,5%</p>
+                <p class="text--bold">кредит от<br>11,5%</p>
             </a>
         </li>
     </ul>
@@ -66,7 +66,7 @@
             <div class="grid grid--small">
                 <div class="col--1-2">
                     <div class="panel--shares">
-                        Хиты продаж в Москве!<br>
+                        Хиты продаж в Минске!<br>
                         Квартиры и апартаменты в готовом ЖК Маршал<br>
                         от 8,81 млн руб.!
                     </div>
@@ -84,7 +84,7 @@
 
     <div class="grid">
         <div class="col--1-2">
-            <p class="text--bold">Москва</p>
+            <p class="text--bold">Минск</p>
 
             <ul class="list list--build">
                 <li class="build">
@@ -102,7 +102,7 @@
                                 <small>млн руб.</small>
                             </span>
                             <span class="build__desc-ipoteka">
-                                Ипотека <br>от 11.5 %
+                                кредит <br>от 11.5 %
                             </span>
                         </span>
                         <span class="build__footer">
@@ -125,7 +125,7 @@
                                 <small>млн руб.</small>
                             </span>
                             <span class="build__desc-ipoteka">
-                                Ипотека <br>от 11.5 %
+                                кредит <br>от 11.5 %
                             </span>
                         </span>
                         <span class="build__footer">
@@ -148,7 +148,7 @@
                                 <small>млн руб.</small>
                             </span>
                             <span class="build__desc-ipoteka">
-                                Ипотека <br>от 11.5 %
+                                кредит <br>от 11.5 %
                             </span>
                         </span>
                         <span class="build__footer">
@@ -177,7 +177,7 @@
                                 <small>млн руб.</small>
                             </span>
                             <span class="build__desc-ipoteka">
-                                Ипотека <br>от 11.5 %
+                                кредит <br>от 11.5 %
                             </span>
                         </span>
                         <span class="build__footer">
@@ -191,7 +191,7 @@
 
     <div class="panel panel--box">
         <p class="text--h3">
-            <a class="link link--reset" href="/sale-realty/flats">Самые дорогие квартиры в Москве</a>
+            <a class="link link--reset" href="/sale-realty/flats">Самые дорогие квартиры в Минске</a>
         </p>
 
         <ul class="grid grid-col--1-4 list">
@@ -226,7 +226,7 @@
         </ul>
 
         <div class="margin--top">
-            <a href="#/" class="button button--medium button--green">Самые дешевые квартиры в Москве</a>
+            <a href="#/" class="button button--medium button--green">Самые дешевые квартиры в Минске</a>
         </div>
     </div>
 </div>
