--- a/views/sale-realty/prodazha-domov-kottedzhej.html
+++ b/views/sale-realty/prodazha-domov-kottedzhej.html
@@ -37,7 +37,7 @@
                 <i></i>
             </div>
             <p>
-                Подберем варианты за 24 часа по всем базам Москвы и области.
+                Подберем варианты за 24 часа по всем базам Минска и области.
             </p>
         </div>
 
@@ -59,7 +59,7 @@
 
     <h3 class="margin--v">Выбор домов и коттеджей по шоссе</h3>
     <p>Сориентироваться в море предложений и сделать правильный выбор вам помогут наши эксперты – специалисты агентства недвижимости ЗемНедвижимость. Они предложат объекты, расположенные во всех районах Подмосковья, и в зависимости от ваших приоритетов наиболее удобные варианты подъезда.</p>
-    <p>Мы поможем купить готовый дом в Московской области недорого, в максимально сжатые сроки и решим все вопросы, связанные с оформлением сделки. Кроме того, мы возьмем на себя все заботы по оформлению и сопровождению продажи загородного дома или коттеджа в Московской области!</p>
+    <p>Мы поможем купить готовый дом в Минской области недорого, в максимально сжатые сроки и решим все вопросы, связанные с оформлением сделки. Кроме того, мы возьмем на себя все заботы по оформлению и сопровождению продажи загородного дома или коттеджа в Минской области!</p>
     <p>Покупать и продавать недвижимость с нами просто, легко и максимально выгодно!</p>
 
 </div>
