--- a/views/sale-realty/search.html
+++ b/views/sale-realty/search.html
@@ -4,7 +4,7 @@
         <li><span>Недвижимость</span></li>
     </ul>
 
-    <h1>Продажа квартир в Москве</h1>
+    <h1>Продажа квартир в Минске</h1>
 
     <div data-ng-include="'/views/component/filter.html'"></div>
 
@@ -21,7 +21,7 @@
         </ul>
     </div>
 
-    <h3 class="margin--v">Найдено 488 из 15000 квартир в городе Москва</h3>
+    <h3 class="margin--v">Найдено 488 из 15000 квартир в городе Минск</h3>
 
     <div data-ng-include="'/views/component/list-room.html'"></div>
 
@@ -34,7 +34,7 @@
                 <i></i>
             </div>
             <p>
-                Подберем варианты за 24 часа по всем базам Москвы и области.
+                Подберем варианты за 24 часа по всем базам Минска и области.
             </p>
         </div>
 
