--- a/views/uslugi/pokupka-kvartir-v-novostroykakh.html
+++ b/views/uslugi/pokupka-kvartir-v-novostroykakh.html
@@ -13,7 +13,7 @@
         <li class="col--1-4">
             <a href="/uslugi/pokupka-kvartir-i-komnat/">
                 <span class="panel--120-blue"><img src="/Content/img/uslugi/icon-14.png"></span>
-                <p class="text--bold">Военная <br>ипотека</p>
+                <p class="text--bold">Военная <br>кредит</p>
             </a>
         </li>
         <li class="col--1-4">
@@ -37,7 +37,7 @@
     </ul>
 
     <p class="text--center margin--v-large">
-        <a href="#/" class="button button--large button--green">Каталог новостроек Москвы и области</a>
+        <a href="#/" class="button button--large button--green">Каталог новостроек Минска и области</a>
     </p>
 
 
