--- a/views/uslugi/pokupka-zagorodnoy-nedvizhimosti - Copy.html
+++ b/views/uslugi/pokupka-zagorodnoy-nedvizhimosti - Copy.html
@@ -13,7 +13,7 @@
         <li class="col--1-4">
             <a href="/uslugi/pokupka-kvartir-i-komnat/">
                 <span class="panel--120-blue"><img src="/Content/img/uslugi/icon-14.png"></span>
-                <p class="text--bold">Военная <br>ипотека</p>
+                <p class="text--bold">Военная <br>кредит</p>
             </a>
         </li>
         <li class="col--1-4">
@@ -58,7 +58,7 @@
                 <a href="#">
                     <img src="http://www.incom.ru/upload/iblock/bcc/dzn2.jpg" class="border--radius" alt="">
                 </a>
-                <a href="#/" class="list__link text--h4 margin--top link">Выгодная ипотека</a>
+                <a href="#/" class="list__link text--h4 margin--top link">Выгодная кредит</a>
                 <p class="margin--top">
                     Подача документов<br>
                     сразу в несколько банков
