--- a/views/uslugi/programma-loyalnosti.html
+++ b/views/uslugi/programma-loyalnosti.html
@@ -71,7 +71,7 @@
                 </a>
             </p>
 
-            <p>При приобретении объекта на первичном рынке (в новостройке) в Москве и Московской области клиент получает программную папку, в которой, помимо каталога, содержится свидетельство на получение дисконтной карты «Новосел». Для удобства использования свидетельство, в отличие от карты, не имеет срока действия, и его можно обменять на карту в администрации «Каширского Двора» в удобное для вас время, когда вы будете готовы приступить к ремонту.</p>
+            <p>При приобретении объекта на первичном рынке (в новостройке) в Минске и Минской области клиент получает программную папку, в которой, помимо каталога, содержится свидетельство на получение дисконтной карты «Новосел». Для удобства использования свидетельство, в отличие от карты, не имеет срока действия, и его можно обменять на карту в администрации «Каширского Двора» в удобное для вас время, когда вы будете готовы приступить к ремонту.</p>
         </div>
     </div>
 </div>
