--- a/views/uslugi/pokupka-kvartir-i-komnat.html
+++ b/views/uslugi/pokupka-kvartir-i-komnat.html
@@ -90,7 +90,7 @@
                 <i></i>
             </div>
             <p>
-                Подберем варианты за 24 часа по всем базам Москвы и области.
+                Подберем варианты за 24 часа по всем базам Минска и области.
             </p>
         </div>
 
@@ -104,7 +104,7 @@
         <ul class="question-board">
             <li>
                 <div class="left">
-                    <a class="question-board__link" href="/uslugi/besplatnye-kosultacii/pokupka_kvartiry/vopros-1507/">Здравствуйте! Сообщите, пожалуйста, сколько будет стоить (каков % от цены квартиры) поиск / подбор квартиры вашими специалистами в г. Москве?</a>
+                    <a class="question-board__link" href="/uslugi/besplatnye-kosultacii/pokupka_kvartiry/vopros-1507/">Здравствуйте! Сообщите, пожалуйста, сколько будет стоить (каков % от цены квартиры) поиск / подбор квартиры вашими специалистами в г. Минске?</a>
                     <div class="question-board__info">
                         <span>Дмитрий</span>
                         <span>01.05.2016, </span>
@@ -118,7 +118,7 @@
             </li>
             <li>
                 <div class="left">
-                    <a class="question-board__link" href="/uslugi/besplatnye-kosultacii/pokupka_kvartiry/vopros-1507/">Здравствуйте! Сообщите, пожалуйста, сколько будет стоить (каков % от цены квартиры) поиск / подбор квартиры вашими специалистами в г. Москве?</a>
+                    <a class="question-board__link" href="/uslugi/besplatnye-kosultacii/pokupka_kvartiry/vopros-1507/">Здравствуйте! Сообщите, пожалуйста, сколько будет стоить (каков % от цены квартиры) поиск / подбор квартиры вашими специалистами в г. Минске?</a>
                     <div class="question-board__info">
                         <span>Дмитрий</span>
                         <span>01.05.2016, </span>
@@ -132,7 +132,7 @@
             </li>
             <li>
                 <div class="left">
-                    <a class="question-board__link" href="/uslugi/besplatnye-kosultacii/pokupka_kvartiry/vopros-1507/">Здравствуйте! Сообщите, пожалуйста, сколько будет стоить (каков % от цены квартиры) поиск / подбор квартиры вашими специалистами в г. Москве?</a>
+                    <a class="question-board__link" href="/uslugi/besplatnye-kosultacii/pokupka_kvartiry/vopros-1507/">Здравствуйте! Сообщите, пожалуйста, сколько будет стоить (каков % от цены квартиры) поиск / подбор квартиры вашими специалистами в г. Минске?</a>
                     <div class="question-board__info">
                         <span>Дмитрий</span>
                         <span>01.05.2016, </span>
